--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,10 @@ url: "https://souto.github.io"
 baseurl: "/cs23-stellar-exoplanet-atmospheres"
 
 remote_theme: just-the-docs/just-the-docs
+just_the_docs:
+  custom_css:
+    - assets/css/just-the-docs-custom.scss
+
 
 plugins:
   - jekyll-remote-theme
