--- a/_config.yml
+++ b/_config.yml
@@ -5,18 +5,24 @@ url: "https://souto.github.io"
 baseurl: "/cs23-stellar-exoplanet-atmospheres"
 
 remote_theme: just-the-docs/just-the-docs
-just_the_docs:
-  custom_css:
-    - assets/css/just-the-docs-custom.scss
-
 
 plugins:
   - jekyll-remote-theme
 
+just_the_docs:
+  custom_css:
+    - assets/css/just-the-docs-custom.scss
+
 search_enabled: true
+search:
+  button: true
+
 permalink: pretty
 color_scheme: light
 heading_anchors: true
+
+back_to_top: true
+back_to_top_text: "Back to top"
 
 aux_links:
   "Program":
