--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Connecting Stellar Chemistry to Exoplanet Structure and Atmospheres"
+title: "CS23: Stellar Chemistry to Exoplanet Structure and Atmospheres"
 description: "CS23 Splinter Session — bridging host-star abundances with exoplanet interiors and atmospheric composition in the JWST/ARIEL era."
 url: "https://souto.github.io"
 baseurl: "/cs23-stellar-exoplanet-atmospheres"
