--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,8 @@ permalink: pretty
 # --- Minimal Mistakes options ---
 minimal_mistakes_skin: "default"   # later you can try: "air", "mint", "contrast", etc.
 search: true
+custom_css:
+  - /assets/css/custom.css
 
 # --- Top navigation ---
 # This drives the top menu bar.
